--- a/index.html
+++ b/index.html
@@ -8,7 +8,91 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="main">
+    <div class="header">
+      <div class="head">
+        <img src="images/image-jeremy.png" alt="error">
+        <div class="name">
+          <span>Report for</span>
+          <h1>Jeremy Robson</h1>
+        </div>
+      </div>
+      <div class="time">
+        <button id="daily">Daily</button>
+        <button id="weekly" class="active">Weekly</button>
+        <button id="monthly">Monthly</button>
+      </div>
+    </div>
+    <div class="content">
+      <div class="box-index" id="work">
+        <div class="decoration"></div>
+        <div class="infor">
+          <div class="title">
+            <h2>Work</h2>
+            <button class="more"></button>
+          </div>
+          <div class="time-data">
+            <h1 class="current"></h1>
+            <span class="previous"></span>
+          </div>
+        </div>
+      </div>
+      <div class="box-index" id="play">
+        <div class="decoration"></div>
+        <div class="infor">
+          <div class="title">
+            <h2>Play</h2>
+            <button class="more"></button>
+          </div>
+          <div class="time-data">
+            <h1 class="current"></h1>
+            <span class="previous"></span>
+          </div>
+        </div>
+      </div>
+      <div class="box-index" id="study">
+        <div class="decoration"></div>
+        <div class="infor">
+          <div class="title">
+            <h2>Study</h2>
+            <button class="more"></button>
+          </div>
+          <div class="time-data">
+            <h1 class="current"></h1>
+            <span class="previous"></span>
+          </div>
+        </div>
+      </div>
+      <div class="box-index" id="exercise">
+        <div class="decoration"></div>
+        <div class="infor">
+          <div class="title">
+            <h2>Exercise</h2>
+            <button class="more"></button>
+          </div>
+          <div class="time-data">
+            <h1 class="current"></h1>
+            <span class="previous"></span>
+          </div>
+        </div>
+      </div>
+      <div class="box-index" id="social">
+
+      </div>
+      <div class="box-index" id="self-care">
+        <div class="decoration"></div>
+        <div class="infor">
+          <div class="title">
+            <h2>Self Care</h2>
+            <button class="more"></button>
+          </div>
+          <div class="time-data">
+            <h1 class="current"></h1>
+            <span class="previous"></span>
+          </div>
+      </div>
+    </div>
+  </div>
   <script src="main.js"></script>
 </body>
 </html>
