--- a/index.html
+++ b/index.html
@@ -18,27 +18,25 @@
         </div>
       </div>
       <div class="time">
-        <button id="daily">Daily</button>
-        <button id="weekly" class="active">Weekly</button>
-        <button id="monthly">Monthly</button>
+        <button id="daily" class="button-time">Daily</button>
+        <button id="weekly" class="button-time">Weekly</button>
+        <button id="monthly" class="button-time">Monthly</button>
       </div>
     </div>
     <div class="content">
       <div class="box-index" id="work">
-        <div class="decoration"></div>
         <div class="infor">
           <div class="title">
             <h2>Work</h2>
             <button class="more"></button>
           </div>
           <div class="time-data">
-            <h1 class="current"></h1>
-            <span class="previous"></span>
+            <h1 class="current">32</h1>
+            <span class="previous">Last Week - 36</span>
           </div>
         </div>
       </div>
       <div class="box-index" id="play">
-        <div class="decoration"></div>
         <div class="infor">
           <div class="title">
             <h2>Play</h2>
@@ -51,7 +49,6 @@
         </div>
       </div>
       <div class="box-index" id="study">
-        <div class="decoration"></div>
         <div class="infor">
           <div class="title">
             <h2>Study</h2>
@@ -64,7 +61,6 @@
         </div>
       </div>
       <div class="box-index" id="exercise">
-        <div class="decoration"></div>
         <div class="infor">
           <div class="title">
             <h2>Exercise</h2>
@@ -77,10 +73,18 @@
         </div>
       </div>
       <div class="box-index" id="social">
-
+        <div class="infor">
+          <div class="title">
+            <h2>Social</h2>
+            <button class="more"></button>
+          </div>
+          <div class="time-data">
+            <h1 class="current"></h1>
+            <span class="previous"></span>
+          </div>
+        </div>
       </div>
       <div class="box-index" id="self-care">
-        <div class="decoration"></div>
         <div class="infor">
           <div class="title">
             <h2>Self Care</h2>
