--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <button class="more"></button>
           </div>
           <div class="time-data">
-            <h1 class="current">32hrs</h1>
-            <span class="previous">Last Week - 36hrs</span>
+            <h1 class="current"></h1>
+            <span class="previous"></span>
           </div>
         </div>
       </div>
